// This file was generated by a tool; you should avoid making direct changes.
syntax = "proto3";
package Tests.AllTypes;

message AllTypesData
{
    sfixed32 Id = 1;
    string IdAlias = 2;
    string Alias_1 = 3;
    bytes Bytes_1 = 4;
    int32 Int32_1 = 5;
    int64 Int64_1 = 6;
    uint32 UInt32_1 = 7;
    uint64 UInt64_1 = 8;
    sint32 SInt32_1 = 9;
    sint64 SInt64_1 = 10;
    fixed32 Fixed32_1 = 11;
    fixed64 Fixed64_1 = 12;
    sfixed32 SFixed32_1 = 13;
    sfixed64 SFixed64_1 = 14;
    double Double_1 = 15;
    float Float_1 = 16;
    bool Boolean_1 = 17;
    SAMPLE_NUMBER Enum_1 = 18;
    DateTime DateTime_1 = 19;
    TimeSpan TimeSpan_1 = 20;
    Uri Uri_1 = 21;
    Guid Guid_1 = 22;
    repeated string ListTextAlias_2 = 23;
    repeated bytes ListBytes_2 = 24;
    repeated int32 ListInt32_2 = 25 [packed = true];
    repeated int64 ListInt64_2 = 26 [packed = true];
    repeated uint32 ListUInt32_2 = 27 [packed = true];
    repeated uint64 ListUInt64_2 = 28 [packed = true];
    repeated sint32 ListSInt32_2 = 29 [packed = true];
    repeated sint64 ListSInt64_2 = 30 [packed = true];
    repeated fixed32 ListFixed32_2 = 31 [packed = true];
    repeated fixed64 ListFixed64_2 = 32 [packed = true];
    repeated sfixed32 ListSFixed32_2 = 33 [packed = true];
    repeated sfixed64 ListSFixed64_2 = 34 [packed = true];
    repeated double ListDouble_2 = 35 [packed = true];
    repeated float ListFloat_2 = 36 [packed = true];
    repeated bool ListBoolean_2 = 37 [packed = true];
    repeated SAMPLE_NUMBER ListEnum_2 = 38 [packed = true];
    repeated DateTime ListDateTime_2 = 39 [packed = true];
    repeated TimeSpan ListTimeSpan_2 = 40 [packed = true];
    repeated Uri ListUri_2 = 41;
    repeated Guid ListGuid_2 = 42;
    map<sfixed32, string> MapString_3 = 43;
    map<string, string> MapAlias_3 = 44;
    SampleInfo SampleInfo_1 = 45;
    map<sfixed32, SampleInfo> MapInfo_3 = 47;
    map<SAMPLE_NUMBER, string> MapEnum_3 = 48;
}

message AllTypesDataTable
{
    map<sfixed32, AllTypesData> Map = 1;
}

message CustomFieldData
{
    sfixed32 Id = 1;
    string IdAlias = 2;
    DateTime DateTime_1 = 3;
    TimeSpan TimeSpan_1 = 4;
    Guid Guid_1 = 5;
    Uri Uri_1 = 6;
}

message CustomFieldDataTable
{
    map<sfixed32, CustomFieldData> Map = 1;
}

message EmptyData
{
    sfixed32 Id = 1;
    string IdAlias = 2;
    map<sfixed32, SampleInfo> MapInfo_3 = 47;
}

message EmptyDataTable
{
    map<sfixed32, EmptyData> Map = 1;
}

message EmptyInfo
{
    sfixed32 Id = 1;
    string IdAlias = 2;
}

message SampleInfo
{
    sfixed32 InfoId = 1;
    DateTime DateTime_1 = 3;
    TimeSpan TimeSpan_1 = 4;
    Uri Uri_1 = 5;
    Guid Guid_1 = 6;
    repeated DateTime DateTime_2 = 7 [packed = true];
    repeated TimeSpan TimeSpan_2 = 8 [packed = true];
    repeated Uri Uri_2 = 9;
    repeated Guid Guid_2 = 10;
}

enum SAMPLE_NUMBER
{
    N01_000 = 0;
    N01_001 = 1;
    N01_002 = 2;
    N01_003 = 3;
    N01_004 = 4;
    N01_005 = 5;
    N01_006 = 6;
    N01_007 = 7;
    N01_008 = 8;
    N01_009 = 9;
    N01_010 = 10;
    N02_001 = 11;
    N02_002 = 12;
    N02_003 = 13;
    N02_004 = 14;
    N02_005 = 15;
    N02_006 = 16;
    N02_007 = 17;
    N02_008 = 18;
    N02_009 = 19;
    N02_010 = 20;
}
